updated flexslider style to fix display on ie - block

--- a/sass/components/_flexslider.scss
+++ b/sass/components/_flexslider.scss
@@ -11,6 +11,7 @@
 
 .flexslider {
   @extend %box-shadow-1;
+  display: block;
   margin-bottom: 40px;
   background: #222222;
 
